--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "build": "cd ui/js && npm run build && cp -R build/. ../../app/assets/ && mv ../../app/assets/bundle.js ../../app/assets/js/index.js",
     "postbuild": "echo Build Ui {ui/js}, cp bundle.js to app/assets/js/index.js",
     "build-react": "cd ui/react && npm run build && cp -R build/. ../../app/assets/ && mv ../../app/assets/bundle.js ../../app/assets/js/index.js",
-    "postbuild-react": "echo Build Ui {ui/react}, cp bundle.js to app/assets/js/index.js"
+    "postbuild-react": "echo Build Ui {ui/react}, cp bundle.js to app/assets/js/index.js",
+    "build-typescript": "cd ui/typescript && npm run build && cp -R build/. ../../app/assets/ && mv ../../app/assets/bundle.js ../../app/assets/js/index.js",
+    "postbuild-typescript": "echo Build Ui {ui/typescript}, cp bundle.js to app/assets/js/index.js"
   },
   "dependencies": {},
   "devDependencies": {}
