--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
 ui/js/build
-ui/react/build
 ui/js/node_modules
+
+ui/react/build
 ui/react/node_modules
+
 ui/typescript/build
 ui/typescript/node_modules
+
+ui/vue/build
+ui/vue/node_modules
+
 node_modules
+
 ui/node_modules
 app/node_modules
 vendor/
