--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,9 @@
-ui/js/build
-ui/js/node_modules
+node_modules/
+package-lock.json
+build/
 
-ui/react/build
-ui/react/node_modules
+.vscode/
 
-ui/typescript/build
-ui/typescript/node_modules
+*.d.ts
 
-ui/vue/build
-ui/vue/node_modules
-
-node_modules
-
-ui/node_modules
-app/node_modules
-vendor/
+app/assets/js/*
