--- a/ui/react/package.json
+++ b/ui/react/package.json
@@ -1,5 +1,6 @@
 {
   "name": "frontend",
+  "version": "0.1.0",
   "scripts": {
     "build": "webpack"
   },
@@ -8,13 +9,13 @@
     "file-loader": "^0.11.1",
     "style-loader": "^0.16.0",
     "url-loader": "^0.5.8",
-    "webpack": "^2.3.2"
-  },
-  "dependencies": {
+    "webpack": "^2.3.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
+  },
+  "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
