--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "install:ui:typescript": "cd ui/typescript && npm install",
     "install:ui:vue": "cd ui/vue && npm install",
     "postinstall": "go get -d ./...",
-    "clean": "del-cli app/node_modules && del-cli ui/js/node_modules && del-cli ui/react/node_modules && del-cli ui/typescript/node_modules && del-cli ui/vue/node_modules && del-cli node_modules",
+    "clean": "del-cli -f app/node_modules && del-cli -f ui/js/node_modules && del-cli -f ui/react/node_modules && del-cli -f ui/typescript/node_modules && del-cli -f ui/vue/node_modules && del-cli -f node_modules",
     "build": "npm run build:js",
     "build:js": "cd ui/js && npm run build",
     "postbuild:js": "cpy ui/js/build/*.* app/assets/ && move-cli app/assets/bundle.js app/assets/js/index.js && echo \"Build Ui {ui/js}, cp bundle.js to app/assets/js/index.js\"",
