--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "cpy-cli": "^2.0.0",
     "cross-env": "^5.2.0",
     "del-cli": "^1.1.0",
-    "electron-builder": "^20.28.4",
+    "electron-builder": "latest",
     "move-cli": "^1.2.0"
   }
 }
