--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "install:ui:typescript": "cd ui/typescript && npm install",
     "install:ui:vue": "cd ui/vue && npm install",
     "postinstall": "go get -d ./...",
-    "clean": "npm run cleandist && del-cli -f app/node_modules && del-cli -f ui/js/node_modules && del-cli -f ui/react/node_modules && del-cli -f ui/typescript/node_modules && del-cli -f ui/vue/node_modules && del-cli -f node_modules || exit 0",
-    "cleandist": "del-cli -f dist",
+    "clean": "npm run cleandist && del-cli -f app/node_modules && del-cli -f ui/js/node_modules && del-cli -f ui/react/node_modules && del-cli -f ui/typescript/node_modules && del-cli -f ui/typescript/src/*.css.d.ts && del-cli -f ui/vue/node_modules && del-cli -f node_modules || exit 0",
+    "cleandist": "del-cli -f dist || exit 0",
     "build": "npm run build:js",
     "build:js": "cd ui/js && npm run build",
     "postbuild:js": "cpy ui/js/build/*.* app/assets/ && move-cli app/assets/bundle.js app/assets/js/index.js && echo \"Build Ui {ui/js}, cp bundle.js to app/assets/js/index.js\"",
