--- a/ui/typescript/package.json
+++ b/ui/typescript/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack || webpack"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.2.0",
@@ -11,7 +11,7 @@
     "style-loader": "^0.16.0",
     "ts-loader": "^2.0.3",
     "typescript": "^2.4.2",
-    "typings-for-css-modules-loader": "^1.5.0",
+    "typings-for-css-modules-loader": "^1.7.0",
     "url-loader": "^0.6.2",
     "webpack": "^2.3.2"
   },
