--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
-language: node_js go
-node_js: 
-  - "node"
-go:
-  - "1.10.x"
+matrix:
+  include:
+    - language: node_js
+      node_js: 
+        - "node"
+    - language: go
+      go:
+        - "1.10.x"
+
 install: 
   - npm install
 script:
