--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
-matrix:
-  include:
-    - language: node_js
-      node_js: 
-        - "node"
-    - language: go
-      go:
-        - "1.10.x"
-
+language: go
+go:
+  - "1.10.x"
+before_install:
+  - nvm install node
 install: 
   - npm install
 script:
