--- a/ui/package.json
+++ b/ui/package.json
@@ -17,13 +17,13 @@
     "clean": "del-cli -f js/node_modules && del-cli -f react/node_modules && del-cli -f typescript/node_modules && del-cli -f typescript/src/*.css.d.ts && del-cli -f vue/node_modules && del-cli -f node_modules || exit 0",
     "build": "npm run build:js",
     "build:js": "cd js && npm run build",
-    "postbuild:js": "cpy js/build/*.* build/ && echo \"Build Ui {js}, cp bundle.js to build/bundle.js\"",
+    "postbuild:js": "cpy js/build/*.js build/js/ && echo \"Build Ui {js}, cp bundle.js to build/bundle.js\"",
     "build:react": "cd react && npm run build",
-    "postbuild:react": "cpy react/build/*.* build/ && echo Build Ui {react}, cp bundle.js to build/bundle.js",
+    "postbuild:react": "cpy react/build/*.js build/js/ && echo Build Ui {react}, cp bundle.js to build/bundle.js",
     "build:typescript": "cd typescript && npm run build",
-    "postbuild:typescript": "cpy typescript/build/*.* build/ && echo Build Ui {typescript}, cp bundle.js to build/bundle.js",
+    "postbuild:typescript": "cpy typescript/build/*.js build/js/ && echo Build Ui {typescript}, cp bundle.js to build/bundle.js",
     "build:vue": "cd vue && npm run build",
-    "postbuild:vue": "cpy vue/build/*.* build/ && echo Build Ui {vue}, cp bundle.js to build/bundle.js",
+    "postbuild:vue": "cpy vue/build/*.js build/js/ && echo Build Ui {vue}, cp bundle.js to build/bundle.js",
     "test": "npm run clean && npm install && npm run build && npm run build:react && npm run build:typescript && npm run build:vue"
   },
   "dependencies": {},
