--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,4 @@ script:
   - go get -d -v ./...
   - cd example/ui && npm run test
   - cd ../../
-  - make install-builder
-  - gotron-builder -g example -l --ia32
-  - cd example && gotron-builder
-  - cd ..
-  - gotron-builder -g example -a example/ui/build -w
-  - gotron-builder -g example --out example -w --ia32
+  - make test-ci
