Create versioned fotron-builder executables

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,10 +1,8 @@
 FROM golang:1.11.1-stretch as builder
 WORKDIR /test
-COPY example/ /test/example
+COPY . /test
+RUN rm -r .gotron .gotron-builder
 
 ENV GO111MODULE=on
 
-COPY go.mod .
-COPY go.sum .
-
-RUN GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -a -o example/main.go ./example
+RUN GOOS=linux GOARCH=amd64 CGO_ENABLED=0 go build -o ./example -a example/main.go
